--- a/index.html
+++ b/index.html
@@ -1,47 +1,31 @@
 <!DOCTYPE html>
-<html lang = "eng">
+<html lang="en">
 <head>
-
-<script>
-
-// variables:
-let x, y, text;
-x = "Original"
-text = "Hello ";
-text += "World"
-//end of variables
-
-// functions:
-function show() {
-	document.getElementById("demo").innerHTML = x;
-	console.log("button 1 pressed (show)");
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title></title>
+    <style>
+h1 {
+  text-align: center;
 }
-
-function hide() {
-	document.getElementById("demo").innerHTML = text;
-	console.log("button 2 pressed (hide)")
+h2 {
+  text-align: left;
 }
-
-function $alert() {
-    window.alert("Great Work");
-    console.log("Alert")
-}
-
-// end of functions
-</script>
-
+h3 {
+text-align: left;
+  }
+    </style>
 </head>
 <body>
 
-<h1>Button Test</h1>
+<h1>Dunstable Mazonic Centre</h1>
 
-<h2 id="demo"> Changed </h2>
-
-<button type="button" onclick="show()">Try this</button>
-<button type="button" onclick="hide()">Then this</button>
-<button type="button" onclick="$alert()">And this</button>
-
-
+<h3>Welcome to the Dunstable Masonic Centre web page.</h3>
+<p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
+<a href="file:///C:/Users/luism/PycharmProjects/Test%20Project/masonic%20centre%20web%20page/menu.html">Click here to take a look at our menu</a>
+<P></P>
+<a href="file:///C:/Users/luism/PycharmProjects/Test%20Project/masonic%20centre%20web%20page/directions.html">Click here to find the directions to the centre</a>
+<p></p>
+<a href="file:///C:/Users/luism/PycharmProjects/Test%20Project/masonic%20centre%20web%20page/email%20form.html">Click here to fill out the email form</a>
 
 </body>
 </html>
