--- a/directions.html
+++ b/directions.html
@@ -17,6 +17,6 @@ text-align: left;
 </head>
 <body>
 <h1>DIRECTIONS WIP</h1>
-<a href="file:///C:/Users/luism/PycharmProjects/Test%20Project/masonic%20centre%20web%20page/index.html">Click here to return</a>
+<a href="https://foxtrotechogamma.github.io/DMC-Web/index.html">Click here to return</a>
 </body>
 </html>
