--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,6 @@ h3 {
 </head>
 <body>
 <h1>MENU WIP</h1>
-<a href="file:///C:/Users/luism/PycharmProjects/Test%20Project/masonic%20centre%20web%20page/index.html">Click here to return</a>
+<a href="https://foxtrotechogamma.github.io/DMC-Web/index.html">Click here to return</a>
 </body>
 </html>
