--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ text-align: left;
 </head>
 <body>
 
-<h1>Dunstable Mazonic Centre</h1>
+<h1>Dunstable Masonic Centre</h1>
 
 <h3>Welcome to the Dunstable Masonic Centre web page.</h3>
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
