--- a/directions.html
+++ b/directions.html
@@ -17,6 +17,6 @@ text-align: left;
 </head>
 <body>
 <h1>DIRECTIONS WIP</h1>
-<a href="https://foxtrotechogamma.github.io/DMC-Web/index.html">Click here to return</a>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'">Home</button>
 </body>
 </html>
