--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@ text-align: left;
 
 <h3>Welcome to the Dunstable Masonic Centre web page.</h3>
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
-<a href="https://foxtrotechogamma.github.io/DMC-Web/menu.html">Click here to take a look at our menu</a>
-<P></P>
-<a href="https://foxtrotechogamma.github.io/DMC-Web/directions.html">Click here to find the directions to the centre</a>
 <p></p>
-<a href="https://foxtrotechogamma.github.io/DMC-Web/email%20form.html">Click here to fill out the email form</a>
-
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/menu.html'">Our menu</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/directions.html'">How to get here</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/email%20form.html'">Send an email</button>
 </body>
 </html>
