--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,6 @@ h3 {
 </head>
 <body>
 <h1>MENU WIP</h1>
-<a href="https://foxtrotechogamma.github.io/DMC-Web/index.html">Click here to return</a>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'">Home</button>
 </body>
 </html>
