--- a/directions.html
+++ b/directions.html
@@ -17,6 +17,6 @@ text-align: left;
 </head>
 <body>
 <h1>DIRECTIONS WIP</h1>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'">Home</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="click to go back to the home page">Home</button>
 </body>
 </html>
