--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ text-align: left;
 <h3>Welcome to the Dunstable Masonic Centre web page.</h3>
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
 <p></p>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/menu.html'">Our menu</button>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/directions.html'">How to get here</button>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/email%20form.html'">Send an email</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/menu.html'" title="Click her to look at our menu">Our menu</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/directions.html'" title="Click here for directions">How to get here</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/email%20form.html'" title="Click here to fill out an email form">Send an email</button>
 </body>
 </html>
