--- a/menu.html
+++ b/menu.html
@@ -19,6 +19,6 @@ h3 {
 </head>
 <body>
 <h1>MENU WIP</h1>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'">Home</button>
+<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="Click to go back to the home page">Home</button>
 </body>
 </html>
