--- a/email form.html
+++ b/email form.html
@@ -16,7 +16,7 @@ text-align: left;
     </style>
 </head>
 <body>
-<h1>EMAIL FORM WIP</h1>
+<h1>Contact us (WIP)</h1>
 <button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="click to go back to the home page">Home</button>
 </body>
 </html>
