--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+h1 {
+  text-align: center;
+}
+    </style
     <meta charset="UTF-8">
     <title>WIP page</title>
 </head>
 <body>
-<h1>PAGE WORK IN PROGRESS</h1>
+
+<img src="626x417.avif" width="1310" height="638"></img>
 </body>
 </html>
