--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@ text-align: left;
 <h3>Welcome to the Dunstable Masonic Centre web page.</h3>
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
 <p></p>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/menu.html'" title="Click her to look at our menu">Menu</button>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/directions.html'" title="Click here for directions">Directions</button>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/email%20form.html'" title="Click here to fill out an email form">Contact us</button>
+<button onclick="document.location='dunstablemc.co.uk/menu.html'" title="Click her to look at our menu">Menu</button>
+<button onclick="document.location='dunstablemc.co.uk/directions.html'" title="Click here for directions">Directions</button>
+<button onclick="document.location='dunstablemc.co.uk/form.html'" title="Click here to fill out an email form">Contact us</button>
 </body>
 </html>
