--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Menu Page</title>
     <style>
+        .center {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+        table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 h1 {
   text-align: center;
 }
@@ -15,10 +37,183 @@ h2 {
 h3 {
   text-align: left;
 }
+        h4 {
+        text-align: center;
+        }
 </style>
 </head>
 <body>
-<h1>MENU WIP</h1>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="Click to go back to the home page">Home</button>
+<h1><strong>Masonic Centre Suggested Menu</strong></h1>
+<h4>If what you would like is not here, or you want a celebratory meal please ask</h4>
+<h4>More Information at the bottom of the page</h4>
+<button class="center" onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="Click to go back to the home page">Home</button>
+<br>
+<table>
+    <tr>
+        <th><strong>Starters</strong> (All served with roll and butter)</th>
+        <th><strong>Mains</strong></th>
+        <th><strong>Deserts</strong></th>
+    </tr>
+    <tr>
+        <td><strong>Soup</strong></td>
+        <td>Beef in red win sauce</td>
+        <td>Apple crumble and custard</td>
+    </tr>
+    <tr>
+        <td>Brocoli and stilton</td>
+        <td>Chicken and leek pie</td>
+        <td>Apple pie and custard</td>
+    </tr>
+    <tr>
+        <td>Carrot and coriander</td>
+        <td>Chicken curry</td>
+        <td>Cheesecake</td>
+    </tr>
+    <tr>
+        <td>Chunky vegetable</td>
+        <td>Chicken leg and thigh quarter, roasted with garlic and herbs</td>
+        <td>Eton mess</td>
+    </tr>
+    <tr>
+        <td>Cream of Mushroom</td>
+        <td>Chilli con carne</td>
+        <td>Fruit salad with cream</td>
+    </tr>
+    <tr>
+        <td>Leek and potato</td>
+        <td>Creamy chicken supreme</td>
+        <td>Ice cream</td>
+    </tr>
+    <tr>
+        <td>Spicy tomato and basil</td>
+        <td>Honey mustard chicken breast</td>
+        <td>Rice pudding with jam</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Lasagna with garlic bread</td>
+        <td>Syrup sponge and custard</td>
+    </tr>
+    <tr>
+        <td><strong>Other</strong></td>
+        <td>Mushroom stroganoff</td>
+        <td>Warm chocolate brownies with cream</td>
+    </tr>
+    <tr>
+        <td>Three cheese, Mac and cheese with spinach</td>
+        <td>Pork chops</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Bruschetta with tomato and mozzarella</td>
+        <td>Roast beef with horseradish and Yorkshire pudding</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Buffalo chicken wings</td>
+        <td>Roast pork with apple sauce and crackling</td>
+        <td><strong>Cheese Board</strong> wih Tea/Coffee</td>
+    </tr>
+    <tr>
+        <td>Greek salad with olives and feta</td>
+        <td>Sausages with onion gravy</td>
+        <td>Selection of 3 cheeses and grapes, with crackers &butter</td>
+    </tr>
+    <tr>
+        <td>Houmous and pitta bread with cucumber</td>
+        <td>Spaghetti carbonara</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Pate (smooth or course) with toast</td>
+        <td>Steak and ale pie with lashings of gravy </td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Prawn cocktail</td>
+        <td>Tomato and mozzarella pasta bake with chorizo</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>Smoked mackerel salad</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Fillet of salmon with tartare sauce (£2 extra per person)</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Lamb shank ( £2 extra per person)</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>.</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td><em><strong>Vegetarian options available if ordered in advance</strong></em></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>.</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td><strong>Carbohydrate options</strong></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Garlic bread</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Potato Dauphinois</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Potato wedges</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Roast, mashed or boiled potatoes</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Seasoned rice</td>
+        <td></td>
+    </tr>
+    <tr>
+        <td>.</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>Seasonal vegetables available throughout the year</td>
+        <td></td>
+    </tr>
+</table>
+<p>When you are send out the summons please can you stress to your members and guests that they need to let <strong>YOU</strong> know if they have any</p>
+<p>allergies or special requirements. Being a small centre we have little or no food stored on site, so informing Zoe on the night is of no use.</p>
+<p>Members should not contact Zoe directly, to avoid confusion she will only work with the Secretary.</p>
+<br>
+<p>The cost of the four-course meal is £22, this includes complimentary Tea/Coffee and biscuits before the meeting.</p>
+<p>However, if you drop either the Starter or Dessert the cost will be reduced to £21.</p>
+<p>The minimum dining number is 12, please <strong>ALWAYS</strong> contact Zoe to discuss options if you have low numbers.</p>
+<br>
+<p><strong><i>The choice of menu and estimated number of diners is required six (6) days prior to the meeting.</i></strong></p>
+<p><strong><i>The final number of diners and special dietary requirements is required a minimum of 48hrs before the meeting.</i></strong></p>
 </body>
 </html>
