--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <form method="post" id="contact-form">
-    <h2>Contact us</h2>
+    <h2>Contact us (Not Working)</h2>
     <?php
       $errorMessage = ''; // Define $errorMessage
       echo(!empty($errorMessage) ? $errorMessage : '');
