--- a/Directors.html
+++ b/Directors.html
@@ -13,16 +13,35 @@
         h3 {
         text-align: left;
         }
+        p1 {
+        font-size: 17px;
+        text-align: center;
+        }
         p {
-        font-size: 20px;
+        font-size: 19px;
+        line-height: 27px;
+        }
+        p5 {
+        font-size: 7px;
+        line-height: 7px;
+        color: white;
         }
     </style>
 </head>
 <body>
 <h1>The Directors</h1>
-<p font-size="20px" line-height="20px">Below is a list of Qualified Lodge Members as specified in the Memorandum and Articles of Association of </p>
-<p font-size="20px" line-height="20px">Dunstable Masonic Centre Limited showing their current Nominated Member where there is one.</p>
+<p1><strong>Below is a list of Qualified Lodge Members as specified in the Memorandum and Articles of Association of</strong></p1>
+<p1><strong>Dunstable Masonic Centre Limited showing their current Nominated Member where there is one.</strong></p1>
 <p>Earl of Courtown Lodge No 7653 - Alan McMurray, Company Chairman</p>
 <p>Thistle and Rose Lodge No 9351 - Anthony Bandy, Company Secretary</p>
+<P>Five Spring Council & Lygetun Conclave - Ian Brooks, Company Treasurer</P>
+<p5>.</p5>
+<p>Chiltern Chapter No 1470 - Terry Ogden</p>
+<p>Chiltern Lodge No 1470 - Terence Stock </p>
+<p>Chiltern Lodge of Mark Master Masons No 1470 - none</p>
+<p>Chiltern Lodge of Royal Ark Mariners No 1470 - Dennis Perkins</p>
+<p>Dunstable Chapter No 6092 - none </p>
+<p>Kingsbury Preceptory No 557 - none </p>
+<P>Lodge of St Peter No 6092 - Oliver O’Toole</P>
 </body>
 </html>
