--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <style>
-h1 {
-  text-align: center;
-}
+        h1 {
+        text-align: center;
+        }
     </style>
     <meta charset="UTF-8">
     <title>WIP page</title>
 </head>
 <body>
 
-<img src="626x417.avif" width="1310" height="638"></img>
+<img src="626x417.avif" width="1310" height="638">
 </body>
 </html>
