--- a/directions.html
+++ b/directions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Directions To Masonic Centre</title>
@@ -17,6 +17,7 @@ text-align: left;
 </head>
 <body>
 <h1>DIRECTIONS WIP</h1>
-<button onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="click to go back to the home page">Home</button>
+<a href="https://dunstablemc.co.uk/index.html">
+<button title="Click here To Return Home">Home</button>
 </body>
 </html>
