--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title></title>
@@ -23,12 +23,12 @@
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
 <p></p>
 <a href="https://dunstablemc.co.uk/menu.html">
-<button title="Click her to look at our menu">Menu</button>
+<button title="Click her to return home">Home</button>
 </a>
 <a href="https://dunstablemc.co.uk/directions.html">
 <button title="Click here for directions">Directions</button>
 </a>
-<a href="https://dunstablemc.co.uk/form.html">
+<a href="https://dunstablemc.co.uk/wipf.html">
 <button title="Click here to fill out an email form">Contact us</button>
 </a>
 </body>
