--- a/meetings.html
+++ b/meetings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Meetings</title>
@@ -25,6 +25,8 @@
 </head>
 <body>
 <h1>Masonic Centre Meetings</h1>
+<a href="https://dunstablemc.co.uk/index.html">
+<button title="Click her to return home">Home</button>
 <table width="100%">
     <tr>
         <td colspan="2"></td>
