--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,8 @@ background-color: #FFFFFF;
 <h1><strong>Masonic Centre Suggested Menu</strong></h1>
 <h4>If what you would like is not here, or you want a celebratory meal please ask</h4>
 <h4>More Information at the bottom of the page</h4>
-<button class="center" onclick="document.location='https://foxtrotechogamma.github.io/DMC-Web/index.html'" title="Click to go back to the home page">Home</button>
+<a href="https://dunstablemc.co.uk/index.html">
+<button title="Click her to return home">Home</button>
 <br>
 <table style="width:100%">
     <tr>
