--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <p>Here you can find information regarding our menu, directions on how to get here and the history of our building</p>
 <p></p>
 <a href="https://dunstablemc.co.uk/menu.html">
-<button title="Click her to return home">Home</button>
+<button title="Click here to view our menu">Menu</button>
 </a>
 <a href="https://dunstablemc.co.uk/directions.html">
 <button title="Click here for directions">Directions</button>
