--- a/home.html
+++ b/home.html
@@ -29,7 +29,10 @@
 <button title="Click here for directions">Directions</button>
 </a>
 <a href="https://dunstablemc.co.uk/wipf.html">
-<button title="Click here to fill out an email form">Contact us</button>
+<button title="Click here to view the list of our directors">Directors</button>
+</a>
+<a href="https://dunstablemc.co.uk/wipf.html">
+<button title="Click here to fill out an email form (Work in progress)">Contact us</button>
 </a>
 </body>
 </html>
