--- a/home.html
+++ b/home.html
@@ -32,6 +32,9 @@
 <button title="Click here to view the list of our directors">Directors</button>
 </a>
 <a href="https://dunstablemc.co.uk/wipf.html">
+<button title="Click here to view the location, time, and date of our meetings">Meetings</button>
+</a>
+<a href="https://dunstablemc.co.uk/wipf.html">
 <button title="Click here to fill out an email form (Work in progress)">Contact us</button>
 </a>
 </body>
