--- a/home.html
+++ b/home.html
@@ -28,10 +28,10 @@
 <a href="https://dunstablemc.co.uk/directions.html">
 <button title="Click here for directions">Directions</button>
 </a>
-<a href="https://dunstablemc.co.uk/wipf.html">
+<a href="https://dunstablemc.co.uk/directors.html">
 <button title="Click here to view the list of our directors">Directors</button>
 </a>
-<a href="https://dunstablemc.co.uk/wipf.html">
+<a href="https://dunstablemc.co.uk/meetings.html">
 <button title="Click here to view the location, time, and date of our meetings">Meetings</button>
 </a>
 <a href="https://dunstablemc.co.uk/wipf.html">
