--- a/directions.html
+++ b/directions.html
@@ -8,16 +8,46 @@ h1 {
   text-align: center;
 }
 h2 {
-  text-align: left;
+  text-align: center;
 }
 h3 {
-text-align: left;
+text-align: center;
   }
+.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+  }
+.cen {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 4%;
+  }
+        p {
+        text-align: center;
+        font-size: 20px;
+        line-height: 0.8px;
+        }
     </style>
 </head>
 <body>
-<h1>DIRECTIONS WIP</h1>
+<h1>Directions To Dunstable Masonic Center</h1>
 <a href="https://dunstablemc.co.uk/index.html">
-<button title="Click here To Return Home">Home</button>
+<button title="Click here To Return Home" class="cen">Home</button>
+</a>
+<h2>Cemetery Lane, off Meadway, Dunstable LU6 3JT</h2>
+<h3>Note cars can’t come up Cemetery Lane from Kirby Road.</h3>
+<img src="lane.jpg" class="center" title="Entrance to Cemetery Lane">
+<h3>What Three Words Location: ///fish.cubes.sang</h3>
+<p>Coming from West Street Cemetery Lane is, about ¾ of the way along Meadway, on the left</p>
+<p>immediately after the bus shelter.</p>
+<br>
+<p>Please drive slowly and carefully down the Lane to the bollards,</p>
+<p>the Centre is on the right, it has a large car park with 46 marked spaces.</p>
+<br>
+<p><strong>Remember most roads in Dunstable are 20 mph.</strong></p>
+<img class="center" src="map.jpg">
 </body>
 </html>
