--- a/directors.html
+++ b/directors.html
@@ -26,12 +26,18 @@
         line-height: 7px;
         color: white;
         }
+        .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+        }
     </style>
 </head>
 <body>
 <h1>The Directors</h1>
 <a href="https://dunstablemc.co.uk/index.html">
-<button title="Click her to return home">Home</button>
+<button class="center" title="Click her to return home">Home</button>
 </a>
 <br>
 <p1><strong>Below is a list of Qualified Lodge Members as specified in the Memorandum and Articles of Association of</strong></p1>
